# SpacetimeMultiplayerDemo

./: .gitignore  .gitmodules  README.md  bind.sh
Server/: .gitignore  Cargo.toml  Makefile.toml  bitcraft-mini-module-wat  build.sh  expand.sh
Server/.cargo/: config.toml
Server/bitcraft-mini/: Cargo.toml
Server/crates/bitcraft-mini/: Cargo.toml  lib.rs
Server/crates/bitcraft-mini-expand/: Cargo.toml
Server/crates/bitcraft-mini-expand/src/: lib.rs
Server/crates/bitcraft-mini/src/: components.rs  lib.rs  math.rs  npcs.rs  output.rs  random.rs  tables.rs  terrain_generation.rs  tuples.rs
Server/crates/bitcraft-mini/src/components/: animation_component.rs  chunk_component.rs  inventory_component.rs  npc_component.rs  player_animation_component.rs  player_component.rs  player_login_component.rs  (+3 more)
Server/cs-src/: Character.cs  CharacterIdentity.cs  CreateNewPlayerReducer.cs  Entity.cs  Inventory.cs  MovePlayerReducer.cs  Player.cs  Pocket.cs  Position.cs  Rotation.cs  WebSocket.cs
Server/protobuf/: CreatePlayer.proto  Entity.proto  Player.proto  Position.proto  WebSocket.proto
Server/src/: components.rs  helpers.rs  lib.rs  math.rs  npcs.rs  random.rs  tables.rs  terrain_generation.rs  trade_session.rs  tuples.rs
Server/src/components/: animation_component.rs  chunk_component.rs  inventory_component.rs  npc_component.rs  player_component.rs  player_login_component.rs  resource_component.rs  trade_session_component.rs  transform_component.rs
Server/src/npcs/: npc_agents.rs  npc_reducers.rs
Server/src/trade_session/: trade_session_reducers.rs
(+580 files in other folders)
