[package]
name = "bitcraft-mini"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]

serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.81"
backtrace = "0.3.64"
noise = "0.7.0"
conv = "0.3.3"
fast_poisson = "0.5.2"
rand = { version = "0.8.5", default-features = false }
rand_chacha = "0.3.1"
# failure-getrandom = "0.1"
getrandom = { version = "0.2", features = ["custom"] }

# These will be replaced with crates on crates.io eventually
spacetimedb = "0.3"

[profile.release]
opt-level = 's'
lto = true
