[package]
name = "bitcraft-mini-expand"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]

serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.81"
backtrace = "0.3.64"

# These will be replaced with crates on crates.io eventually
spacetimedb-bindings = { path = "../../../../spacetimedb/crates/spacetimedb-bindings" }
spacetimedb-bindgen = { path = "../../../../spacetimedb/crates/spacetimedb-bindgen" }
